wow... everything seems to be working... no bugs or nothing... now we can start working on the unmerging part

--- a/Sleeping and Merging Bodies/MergingBodiesProj/.project
+++ b/Sleeping and Merging Bodies/MergingBodiesProj/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>COMP559_A2</name>
+	<name>MergingBodiesProj</name>
 	<comment></comment>
 	<projects>
 	</projects>
