--- a/Sleeping and Merging Bodies/MergingBodiesProj/.classpath
+++ b/Sleeping and Merging Bodies/MergingBodiesProj/.classpath
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="jars/mintools.jar"/>
-	<classpathentry exported="true" kind="lib" path="jars/vecmath.jar"/>
-	<classpathentry exported="true" kind="lib" path="jars/mtj.jar" sourcepath="C:/Users/otmanb/Desktop/Projects/Physics Based Animation/Sleeping and Merging Collisions/COMP559_A2/jars/mtjsrc.zip"/>
+	<classpathentry kind="lib" path="jars/mintools.jar"/>
+	<classpathentry kind="lib" path="jars/mtjsrc.zip"/>
+	<classpathentry kind="lib" path="jars/vecmath.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jogl"/>
+	<classpathentry kind="lib" path="jars/mtj.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
