--- a/Sleeping and Merging Bodies/MergingBodiesProj/.classpath
+++ b/Sleeping and Merging Bodies/MergingBodiesProj/.classpath
@@ -7,9 +7,8 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="jars/mintools.jar"/>
-	<classpathentry kind="lib" path="jars/mtjsrc.zip"/>
 	<classpathentry kind="lib" path="jars/vecmath.jar"/>
-	<classpathentry kind="lib" path="jars/mtj.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jogl"/>
+	<classpathentry kind="lib" path="jars/mtj.jar" sourcepath="jars/mtjsrc.zip"/>
+	<classpathentry kind="lib" path="jars/jogamp-fat.jar" sourcepath="jars/jogamp-fat-java-src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
