--- a/Sleeping and Merging Bodies/MergingBodiesProj/.classpath
+++ b/Sleeping and Merging Bodies/MergingBodiesProj/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="jars/vecmath.jar"/>
 	<classpathentry kind="lib" path="jars/mtj.jar" sourcepath="jars/mtjsrc.zip"/>
 	<classpathentry kind="lib" path="jars/jogamp-fat.jar" sourcepath="jars/jogamp-fat-java-src.zip"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
